--- a/src/main/webapp/WEB-INF/views/admin/manageAccount/list_users.html
+++ b/src/main/webapp/WEB-INF/views/admin/manageAccount/list_users.html
@@ -30,6 +30,7 @@
                 <thead>
                 <tr>
                     <th>#</th>
+<!--                    <th>Ảnh đại diện</th>-->
                     <th>Họ và tên</th>
                     <th>Email</th>
                     <th>Số điện thoại</th>
@@ -43,6 +44,17 @@
                 <tbody>
                 <tr th:each="user,stat : ${users}">
                     <td th:text="${stat.count}"></td>
+<!--                    <td class="flex justify-center items-center">-->
+<!--                        <img th:src="@{'/images/avatar/' + ${user.avtPath}}"-->
+<!--                             alt="Ảnh đại diện"-->
+<!--                             class="w-16 h-16 rounded-full object-contain border border-gray-300 bg-white"-->
+<!--                             th:if="${user.avtPath != null and user.avtPath != ''}" />-->
+
+<!--                        <img th:src="@{/images/avatar/avt_default.gif}"-->
+<!--                             alt="Ảnh mặc định"-->
+<!--                             class="w-16 h-16 rounded-full object-contain border border-gray-300 bg-white"-->
+<!--                             th:unless="${user.avtPath != null and user.avtPath != ''}" />-->
+<!--                    </td>-->
                     <td th:text="${user.fullname}"></td>
                     <td th:text="${user.email}"></td>
                     <td th:text="${user.phonenumber}"></td>
@@ -60,16 +72,31 @@
                         </button>
                     </td>
                     <td>
-                        <a th:href="@{/manageAccount/viewUser/{id}(id=${user.id})}" title="Xem chi tiết" class="text-blue-600 hover:text-blue-800">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        <a th:href="@{/manageAccount/updateUser/{id}(id=${user.id})}" title="Cập nhật thông tin" class="text-yellow-600 hover:text-yellow-800">
-                            <i class="fas fa-edit"></i>
-                        </a>
-                        <button type="button" title="Chặn/Kích hoạt tài khoản" class="text-red-600 hover:text-red-800" th:data-id="${user.id}" th:data-status="${user.status}">
-                            <i class="fas" th:classappend="${user.status == 'active'} ? ' fa-user-slash' : ' fa-user-check'"></i>
-                        </button>
+                        <div class="flex items-center justify-center gap-3 h-full">
+                            <a th:href="@{/manageAccount/viewUser/{id}(id=${user.id})}"
+                               title="Xem chi tiết"
+                               class="text-blue-600 hover:text-blue-800 text-xl">
+                                <i class="fas fa-eye"></i>
+                            </a>
+
+                            <a th:href="@{/manageAccount/updateUser/{id}(id=${user.id})}"
+                               title="Cập nhật thông tin"
+                               class="text-yellow-600 hover:text-yellow-800 text-xl">
+                                <i class="fas fa-edit"></i>
+                            </a>
+
+                            <button type="button"
+                                    title="Chặn/Kích hoạt tài khoản"
+                                    th:data-id="${user.id}"
+                                    th:data-status="${user.status}"
+                                    class="text-red-600 hover:text-red-800 text-xl">
+                                <i class="fas"
+                                   th:classappend="${user.status == 'active'} ? ' fa-user-slash' : ' fa-user-check'"></i>
+                            </button>
+                        </div>
                     </td>
+
+
                 </tr>
                 </tbody>
             </table>
@@ -82,6 +109,7 @@
 
 <script th:src="@{/js/admin/homeAdmin.js}"></script>
 <script th:src="@{/js/admin/dataTable.js}"></script>
+<script th:src="@{/js/auth/alert.js}"></script>
 
 </body>
 </html>
