--- a/src/main/webapp/WEB-INF/views/admin/manageAccount/approve_users.html
+++ b/src/main/webapp/WEB-INF/views/admin/manageAccount/approve_users.html
@@ -101,7 +101,7 @@
 
                 if (reason) {
                     const encodedReason = encodeURIComponent(reason);
-                    window.handleAction(`/manageAccount/approveUser/reject?id=${id}&reason=${encodedReason}`, "Duyệt tài khoản thành công");
+                    window.handleAction(`/manageAccount/approveUser/reject?id=${id}&reason=${encodedReason}`, "Xử lý tài khoản thành công");
                 }
             }
         });
