--- a/src/main/webapp/WEB-INF/views/admin/manageAccount/add_new_user.html
+++ b/src/main/webapp/WEB-INF/views/admin/manageAccount/add_new_user.html
@@ -33,7 +33,7 @@
                     Thêm mới người dùng
                 </h1>
             </div>
-            <form id="userForm" th:action="@{/manageAccount/addUser}" th:object="${user}" method="POST" enctype="multipart/form-data"
+            <form id="userForm" th:action="@{/manageDepartments/addDepartment}" th:object="${user}" method="POST" enctype="multipart/form-data"
                   autocomplete="off" novalidate class="flex flex-col lg:flex-row gap-8">
                 <div class="flex-1 space-y-6">
                     <div>
