CRUD account admin

--- a/src/main/webapp/WEB-INF/views/admin/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/admin/fragments/header.html
@@ -84,7 +84,7 @@
                         role="menu"
                         aria-labelledby="profileBtn"
                 >
-                    <a class="block px-4 py-2 hover:bg-blue-50 text-gray-800 font-medium" href="#" role="menuitem"
+                    <a class="block px-4 py-2 hover:bg-blue-50 text-gray-800 font-medium" href="/accountInfo/adminInfo" role="menuitem"
                        tabindex="0"
                     >Thông tin cá nhân</a
                     >
