--- a/spring-security-demo/src/main/webapp/WEB-INF/views/admin.html
+++ b/spring-security-demo/src/main/webapp/WEB-INF/views/admin.html
@@ -10,6 +10,6 @@
 <p sec:authorize="isAuthenticated()">
     Logged in as <span sec:authentication="principal.username"></span>
 </p>
-<a th:href="@{/logout}">Logout</a>
+<a th:href="@{/}">Logout</a>
 </body>
 </html>
